# Minecraft-Clone

./: .gitignore  Architecture.txt  CMakeLists.txt  todo.txt
include/: Application.h  Block.h  BlockTypes.h  Camera.h  Chunk.h  ChunkCoord.h  ChunkManager.h  Constants.h  Crosshair.h  FaceData.h  ImGuiManager.h  InputManager.h  LightSystem.h  Raycaster.h  Settings.h  Shader.h  TerrainGenerator.h  TextureAtlas.h  ThreadPool.h  VertexBuffer.h  World.h
include/Block/: Block.h  BlockFaceData.h  BlockOutline.h  BlockTypes.h
include/Chunk/: Chunk.h  ChunkCoord.h  ChunkManager.h  ChunkMesh.h  ChunkMeshBuilder.h  ChunkPipeline.h  ChunkStateMachine.h  ChunkStats.h  MeshData.h  Vertex.h
include/OpenGL/: ElementBuffer.h  VertexArray.h  VertexBufferLayout.h
include/Performance/: Profiler.h  ScopedTimer.h
libs/glad/: glad.c
libs/glad/include/glad/: glad.h
shaders/: blockOutlineFShader.glsl  block_outline.vert  chunk.frag  chunk.vert  crosshair.frag  fShader.glsl  vShader.glsl
src/: Application.cpp  Block.cpp  Camera.cpp  Camera.h  Chunk.cpp  ChunkManager.cpp  Crosshair.cpp  ImGuiManager.cpp  InputManager.cpp  LightSystem.cpp  Raycaster.cpp  Shader.cpp  TerrainGenerator.cpp  TextureAtlas.cpp  ThreadPool.cpp  VertexArray.cpp  VertexBuffer.cpp  World.cpp  main.cpp
src/Block/: Block.cpp  BlockOutline.cpp
src/Chunk/: Chunk.cpp  ChunkManager.cpp  ChunkMesh.cpp  ChunkMeshBuilder.cpp  ChunkPipeline.cpp  ChunkStateMachine.cpp
src/OpenGL/: ElementBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Performance/: Profiler.cpp  ScopedTimer.cpp
